kubernetes/hcloud/apps/network/traefik/error-pages/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      priority: 1
      middlewares:
        - name: error-pages-network@kubernetescrd
      services:
        - kind: Service
          name: error-pages
          namespace: network
          port: 8080

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-pages
spec:
  errors:
    status:
      - "300-300"
      - "303-306"
      - "308-599"
    query: /{status}.html
    service:
      name: error-pages
      port: 8080
